Few php changes

--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -107,6 +107,7 @@
 						</a>
 					</div>
 				</div>
+				<a class="btn btn-primary center-button btn-lg" href="../Tour Index/Tour-Index.html">View All</a>
 			</div>
 		</div>
 		<!-- PREPLANNED END -->
@@ -153,7 +154,7 @@
 			</button>
 			<h3>My Travelbook</h3>
 			<div class="card">
-				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<h6 class="sidebar-heading">Chosen Destinations</h6>
 				<div class="list-group">
 					<a href="#" class="list-group-item home">
 			    HOME
