--- a/Show Destination/show-destination.html
+++ b/Show Destination/show-destination.html
@@ -36,9 +36,6 @@
 		</div>
 
 		<!-- GOOGLE SEARCH END -->
-
-
-
 		<!-- MORE INFORMATION -->
 
 			<div class="container">
@@ -91,27 +88,27 @@
 			<h3 class="container-heading">Reviews</h3>
 			<div class="row">
 				<div class="comment">
-					<img src="https://static.pexels.com/photos/295821/pexels-photo-295821.jpeg" class="rounded-circle comment-image">
+					<img src="../img/Woman_3.jpeg" class="rounded-circle comment-image">
 					<div class="comment-text">
-							<h6 class="comment-heading">Best day evar!</h6>
-							<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<p class="comment-author">Jane Doe</p>
+							<h6 class="comment-heading">Simply Amazing!</h6>
+							<p>I had the most amazing time exploring cultures throughout Asia.  My applause to the Cultural Tour.</p>
+							<p class="comment-author">Ellen Bane</p>
 					</div>
 				</div>
 				<div class="comment">
-					<img src="https://static.pexels.com/photos/262226/pexels-photo-262226.jpeg" class="rounded-circle comment-image">
+					<img src="../img/Man.jpeg" class="rounded-circle comment-image">
 					<div class="comment-text">
-							<h6 class="comment-heading">Best day evar!</h6>
-							<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<p class="comment-author">Jane Doe</p>
+							<h6 class="comment-heading">Thanks to Travel Buddy</h6>
+							<p>Thanks to Travel Buddy, I could explore my surrounding before I went to Paris.</p>
+							<p class="comment-author">Markus Ladden</p>
 					</div>
 				</div>
 				<div class="comment">
-					<img src="https://static.pexels.com/photos/91227/pexels-photo-91227.jpeg" class="rounded-circle comment-image">
+					<img src="../img/Man_2.jpeg" class="rounded-circle comment-image">
 					<div class="comment-text">
-							<h6 class="comment-heading">Best day evar!</h6>
-							<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<p class="comment-author">Jane Doe</p>
+							<h6 class="comment-heading">Best Day Ever!</h6>
+							<p>Exploring the streets of Barcelona was just breath-taking.  I thank Travel Buddy for providing me information regarding Barcelona!</p>
+							<p class="comment-author">Alex O'Malley</p>
 					</div>
 				</div>
 			</div>
@@ -138,42 +135,42 @@
 			</button>
 			<h3>My Travelbook</h3>
 			<div class="card">
-				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<h6 class="sidebar-heading">Chosen Destinations</h6>
 				<div class="list-group">
 					<a href="#" class="list-group-item home">
-						HOME
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						London
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						Paris
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						Rome
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-					</div>
-					<a href="#" class="list-group-item home">
-						HOME
-					</a>
+			    HOME
+			  </a>
+			  <div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 16 723.6km</p>
+					<p><b>Leg Travel Duration:</b> 21 Hrs 14 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=California" class="list-group-item active">
+			    California
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 4 747.8km</p>
+					<p><b>Leg Travel Duration:</b> 4 Hrs 41 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=Miami" class="list-group-item active">
+			    Miami
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 2 053,1km</p>
+					<p><b>Leg Travel Duration:</b> 3Hrs 5 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=NewYork" class="list-group-item active">
+			    New York
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 12 831km</p>
+					<p><b>Leg Travel Duration:</b> 14 Hrs 50 Mins</p>
+				</div>
+				<a href="#" class="list-group-item home">
+			    HOME
+			  </a>
 				</div>
 			</div>
 		</div>
@@ -239,7 +236,7 @@
 							<span class="custom-control-description">Travelbook 2</span>
 						</label>
 						</div>
-						<a class="btn btn-primary" href="../Tour Show/tour-show.html">Okay</a>
+						<a class="btn btn-primary" href="../Journal Destinations/journal-destinations.html">Okay</a>
 						<button type="button" class="btn btn-secondary js-existing-travelbook">Cancel</button>
 					</form>
 			</div>
