Changes made to types
Password type changed to password so password can not be seen.
number type changed to number so no strings can be entered in field

--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class="form-group">
 						<p>Contact Number: </p>
-						<input name = "number" type = "int" class="form-control"></input>
+						<input name = "number" type = "number" class="form-control"></input>
 					</div>
 					<div class="form-group">
 						<p>Username: </p>
