--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="form-group">
 						<label>Password:</label>
-						<input name = "password" type = "text" class="form-control"></input>
+						<input name = "password" type = "password" class="form-control"></input>
 					</div>
 					<input type="submit" value="Submit" class="btn btn-primary btn-submit float-right">
 					<!--<a href = "../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a>-->
