Fixed login issue and added cookies

--- a/home.html
+++ b/home.html
@@ -1,5 +1,9 @@
 
 <!DOCTYPE html>
+<?php 
+ $cookie_name = $_COOKIE['UserName'];
+ echo $cookie_name 
+?>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
