--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -1,22 +1,4 @@
 <!DOCTYPE html>
-<?php
-	if($_SERVER["REQUEST_METHOD"] == "GET")
-	{
-		if($_GET['bool'] == "1")
-		{
-			$cookie_value = $_GET['name'];
-			setcookie("UserName", $cookie_value, time() + (7200), "/" ,"simeon.ddns.net");
-			echo $_COOKIE['UserName'];
-			header("Location: http://simeon.ddns.net:8085/travelappbuddy/Landing Page/landing-page.html");
-			}
-			}
-			if($_GET['bool'] == "0")
-			{
-				header("Location: http://simeon.ddns.net:8085/travelappbuddy/Login Page/relogin.html");
-			}
-		}
-	}
-?>
 <html lang="en">
 	<head>
 	
@@ -43,7 +25,7 @@
 				<a href = "../home.html" class="logo logo-small-dark">Travel Buddy</a>
 				<h2>Login</h2>
 				<p>Please enter your username and password.</p>
-				<form action = "http://simeon.ddns.net:8080/testConnect.php" method = "get">
+				<form action = "http://simeon.ddns.net:8080/testConnect.php" method = "post">
 					<div class="form-group">
 						<label>Username:</label>
 						<input name = "fname" type = "text" class="form-control"></input>
@@ -53,7 +35,6 @@
 						<input name = "password" type = "text" class="form-control"></input>
 					</div>
 					<input type="submit" value="Submit" class="btn btn-primary btn-submit float-right">
-					<!--<a href = "../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a>-->
 					<div class = "buttons">
 						<a href = "../home.html">Back</a>&emsp;
 						<a href = "#" class = "pass">
