--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -1,26 +1,4 @@
 <!DOCTYPE html>
-<?php
-//helllo
-	if($_SERVER["REQUEST_METHOD"] == "GET")
-	{
-		if($_GET['bool'] == "0")
-		{
-			$cookie_value = $_GET['name'];
-			setcookie("UserName", $cookie_value, time() + (7200), "/" ,"simeon.ddns.net");
-			echo $_COOKIE['UserName'];
-			header("Location: http://simeon.ddns.net:8085/travelappbuddy/Sign Up Page/registration.php");
-			}
-			}
-			if($_GET['bool'] == "1")
-			{
-				header("Location: http://simeon.ddns.net:8085/travelappbuddy/Sign Up Page/registration.php");
-				echo user
-			}
-		}
-	}
-?>
-
-<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -45,7 +23,7 @@
 				<p class="logo logo-small-dark">Travel Buddy</p>
 				<h2>Sign up</h2>
 				<p>Please fill in the following details to start your adventure!</p>
-				<form action = "http://simeon.ddns.net:8080/signUptoets.php" method = "get">
+				<form action = "http://simeon.ddns.net:8080/signUptoets.php" method = "post">
 					<div class="form-group">
 						<p>First Name:</p>
 						<input name = "fName" type = "text" class="form-control"></input>
@@ -76,10 +54,9 @@
 					</div>
 					<div class="form-group">
 						<p>Where do you stay? </p>
-						<input id = "town" type = "text" class="form-control"></input>
+						<input name = "town" type = "text" class="form-control"></input>
 					</div>
 					<input type="submit" value="Submit" class="btn btn-primary btn-submit float-right">
-					<!--<a href="../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a> -->
 					<div class = "buttons">
 						<a href = "../home.html">Back</a>&emsp;
 					</div>
