Added Logout.php and uptated cookie display

--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -23,7 +23,7 @@
 				<p class="logo logo-small-dark">Travel Buddy</p>
 				<h2>Sign up</h2>
 				<p>Please fill in the following details to start your adventure!</p>
-				<form action = "http://simeon.ddns.net:8080/signUptoets.php" method = "post">
+				<form action = "http://simeon.ddns.net:8080/signUptoets.php" method = "get">
 					<div class="form-group">
 						<p>First Name:</p>
 						<input name = "fName" type = "text" class="form-control"></input>
@@ -38,7 +38,7 @@
 					</div>
 					<div class="form-group">
 						<p>Contact Number: </p>
-						<input name = "number" type = "number" class="form-control"></input>
+						<input name = "number" type = "int" class="form-control"></input>
 					</div>
 					<div class="form-group">
 						<p>Username: </p>
