--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Travel Buddy</title>
@@ -18,14 +18,14 @@
 					<a class="btn btn-outline-secondary btn-sm" href="../Sign Up Page/registration.html">Sign Up</a>
 				</div>
 		</nav>
-		
+
 		<!-- NAVBAR END -->
 		<div class="fullscreen-section">
 				<div class="card">
 				<a href = "../home.html" class="logo logo-small-dark">Travel Buddy</a>
 				<h2>Login</h2>
 				<p>Please enter your username and password.</p>
-				<form action = "http://simeon.ddns.net:8080/testConnect.php" method = "post">
+				<form action = "http://192.168.2.150:8080/testConnect.php" method = "post">
 					<div class="form-group">
 						<label>Username:</label>
 						<input name = "fname" type = "text" class="form-control"></input>
@@ -40,11 +40,11 @@
 						<a href = "#" class = "pass">
 						<a href = "#">Forgot your password?</a>
 					</div>
-					
+
 				</form>
 			</div>
 		</div>
-		
+
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
