--- a/home.html
+++ b/home.html
@@ -1,9 +1,5 @@
 
 <!DOCTYPE html>
-<?php 
- $cookie_name = $_COOKIE['UserName'];
- echo $cookie_name 
-?>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -19,7 +15,7 @@
 				<p class="logo logo-small-light">Travel Buddy</p>
 				<div>
 					<a class="btn btn-outline-secondary btn-sm" href="Sign Up Page/registration.html">Sign Up</a>
-					<a class="btn btn-outline-secondary btn-sm" href="Login Page/login.html">Login</a>
+					<a class="btn btn-outline-secondary btn-sm" href="Login Page/log.html">Login</a>
 				</div>
 		</nav>
 		<!-- NAVBAR END -->
